--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="about">
             <h2>About Anamaria</h2>
             <img src="assets/img/me.jpg" alt="Anamaria Gherghisan, smiling">
-            <p>Hi there, I'm Anamaria, a lifelong learner currently taking a course  and exploring the exciting world of Frontend Development with Purple Beard Training. 
+            <p>Hi there, I'm Anamaria, a lifelong learner currently taking a course  and exploring the exciting world of Frontend Development with Purple<br>Beard Training. 
                 My course-work lies within frontend web apps, and the main languages in my tech stack are JavaScript, React, and of course HTML/CSS. While I may not have any
                 direct experience in this field, my previous roles as a packer, picker, machinist, assembly operator in a factory and a warehouse operative,  have all equipped me with valuable skills 
                 such as attention to detail, problem-solving, and the ability to work well under pressure. </p>
