--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
              Performed part-time picking duties, relocating stock, and packing duties.<br>
              Worked as part of a team serving Amazon Peterborough.</p>
               
-            <p>Picker/Packer, Red Rock Partenership(aug 2015-nov 2015)<br>
+            <p>Picker/Packer, Red Rock Partnership(aug 2015-nov 2015)<br>
                Performed part-time packing duties, picking duties, and relocating stock.</p>
             
             <p>Car Cleaner, Orton Hand Car Wash(aug 2014-june 2015)<br>
@@ -88,7 +88,6 @@
             </section>
         <section id="education">
           <h2>Places I've studied</h2>
-          <p>Education:<br>
             Frontend Development, PurpleBeard Training, Uk (march 2023-june 2023)<br>
             Bachelor's Degree Equivalent  on Chemistry, Industrial High-School Group "Dragomir Hurmuzescu", Medgidia, Romania (2005-2009)<br>
             Professional Training Certificate Level III, Chemistry Lab Technician in Natural Resources and Protection of Environment, Industrial High-School Group "Dragomir Hurmuzescu", Medgidia, Romania (2005-2009)<br>
