added image shadow and resized plus some extra characteristics

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anamaria Gherghisan - Portfolio</title>
+    <title>Ana-Maria Gherghisan - Portfolio</title>
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
     <header id="top">
+
         <div class="mobFlexRow">
-            <h1>Anamaria G</h1>
+            <h1>Ana-Maria G</h1>
             <button id="collapseButton" class="navBarButton clickable desktopHide" title="Show Navigation">
                 <svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="menuButtonIcon" fill-rule="evenodd" clip-rule="evenodd"
@@ -32,30 +33,28 @@
         </div>
         </nav>
     </header>
+
     <div class="mainWrapper">
         <main>
             <section id="about">
-                <h2>About Anamaria</h2>
-                <img src="assets/img/me.jpg" alt="Anamaria Gherghisan, smiling">
+                <h2>About Ana-Maria</h2>
+                <img class="img" src="assets/img/me.jpg" alt="Ana-Maria, smiling"><br>
                 <p>Hi,there! I'm Anamaria, a lifelong learner currently taking a course and exploring the exciting world
-                    of
-                    Frontend Development with Purple Beard Training.
+                    of Frontend Development with Purple Beard Training.
                     My course-work and theory lies within frontend web apps, and the main languages in my tech stack are
-                    JavaScript,
-                    React, and of course HTML/CSS. While I may not have any
+                    JavaScript, React, and of course HTML/CSS. While I may not have any
                     direct experience in this field, my previous roles have all equipped me with valuable skills
                     such as attention to detail, problem-solving, and the ability to work well under pressure. </p>
-                <p>I also have an educational-background in Chemist Laboratory Technology and Mass-Media and Journalism,
+                <p>I also have an educational-background in Chemist Laboratory Technology and Mass-Media Communication
+                    and Journalism,
                     which has honed my communication and creativity skills that will come in handy for
                     designing aesthetically pleasing and user-friendly interfaces. </p>
                 <p>When I'm not bent over my computer, perfecting my coding skills and designing beautiful websites, you
-                    may
-                    find me binge-watching documentaries
-                    or cooking up a storm in the kitchen. Oh, and did I mention that I have a talent for cracking puns?
-                    So
-                    be prepared to groan
-                    along with my terrible jokes as we work together on our next project.</p>
+                    may find me binge-watching documentaries or cooking up a storm in the kitchen. Oh, and did I mention
+                    that I have a talent for cracking puns?
+                    So be prepared to groan along with my terrible jokes as we work together on our next project.</p>
             </section>
+
             <section id="project">
 
                 <h2>Projects I'm Working on</h2>
@@ -64,64 +63,68 @@
                     obcaecati
                     deleniti sunt!</p>
             </section>
+
             <section id="work">
+
                 <h2>Places I've Worked</h2>
-                <p> Picker/Packer, IKEA Distribution Centre (feb 2023-Present)<br>
-                    Picking orders using an arm screen, operating LLOP, and working efficiently in a fast-paced
-                    environment.
-                </p>
 
-                <p>Warehouse Assistant, Lidl Distribution Centre (september 2020-feb 2023)<br>
-                    Picked orders using a headset or screen and drove LLOP, wrapped products, and organized stock.<br>
+                <h3>Picker/Packer, IKEA Distribution Centre (feb 2023-Present)</h3>
+                <p>Picking orders using an arm screen, operating LLOP, and working efficiently in a fast-paced
+                    environment.</p><br>
+
+                <h3>Warehouse Assistant, Lidl Distribution Centre (september 2020-feb 2023)</h3>
+                <p>Picked orders using a headset or screen and drove LLOP, wrapped products, and organized stock.<br>
                     Maintained daily warehouse duties and monitored stock levels.<br>
-                    Worked cooperatively as part of a team in a fast-paced environment.</p>
+                    Worked cooperatively as part of a team in a fast-paced environment.</p><br>
 
-                <p>Picker/Packer, Quest Employment(july 2020-september 2020)<br>
-                    Performed packing duties, picking duties, and relocating stock serving March Foods Ltd.</p>
+                <h3>Picker/Packer, Quest Employment(july 2020-september 2020)</h3>
+                <p>Performed packing duties, picking duties, and relocating stock serving March Foods Ltd.</p><br>
 
-                <p>Car Cleaner, Auto Spa Peterborough(june 2019-july 2020)<br>
-                    Hoovered, washed, polished cars, and performed daily tasks in the car wash service industry.</p>
+                <h3>Car Cleaner, Auto Spa Peterborough(june 2019-july 2020)</h3>
+                <p>Hoovered, washed, polished cars, and performed daily tasks in the car wash service industry.</p><br>
 
-                <p>Assembly Operator, Randstad Agency(jan 18-june 2019)<br>
-                    Assembled engines, checked quality, and monitored stock levels.<br>
+                <h3>Assembly Operator, Randstad Agency(jan 18-june 2019)</h3>
+                <p>Assembled engines, checked quality, and monitored stock levels.<br>
                     Moved and organized stock, removed hazardous products, and monitored the work of junior staff.<br>
-                    Worked with computer guidance at Perkins Engines.</p>
+                    Worked with computer guidance at Perkins Engines.</p><br>
 
-                <p>Warehouse Assistant, 24/7 Recruitment Services(october 2017-jan 2018)<br>
-                    Worked as part of a team in a busy distribution center serving DHL Debenhams Supply Chain.</p>
+                <h3>Warehouse Assistant, 24/7 Recruitment Services(october 2017-jan 2018)</h3>
+                <p>Worked as part of a team in a busy distribution center serving DHL Debenhams Supply Chain.</p><br>
 
-                <p>Machinist, City Staff Agency(may 2016-october 2017)<br>
-                    Operated automated or semi-automated plastic moulding injection machines.<br>
-                    Worked as part of a team serving Rge Engineering Group.</p>
+                <h3>Machinist, City Staff Agency(may 2016-october 2017)</h3>
+                <p>Operated automated or semi-automated plastic moulding injection machines.<br>
+                    Worked as part of a team serving Rge Engineering Group.</p><br>
 
-                <p> Warehouse Assistant, PMP Recruitment Ltd Agency (june 2015-jan 2016)<br>
-                    Performed daily warehouse duties including picking, packing, and relocating stock.<br>
+                <h3> Warehouse Assistant, PMP Recruitment Ltd Agency (june 2015-jan 2016)</h3>
+                <p>Performed daily warehouse duties including picking, packing, and relocating stock.<br>
                     Operated goods on conveyor, working with valuable goods and storing/marshalling them
                     effectively.<br>
                     Trained and supervised new staff, organized and stored stock, and maintained accurate computer and
                     manual records.<br>
-                    Worked as part of a team in a busy distribution center serving DHL Debenhams Supply Chain.</p>
+                    Worked as part of a team in a busy distribution center serving DHL Debenhams Supply Chain.</p><br>
 
-                <p>Picker, Transline Group(nov 2015-december 2015)<br>
-                    Performed part-time picking duties, relocating stock, and packing duties.<br>
-                    Worked as part of a team serving Amazon Peterborough.</p>
+                <h3>Picker, Transline Group(nov 2015-december 2015)</h3>
+                <p>Performed part-time picking duties, relocating stock, and packing duties.<br>
+                    Worked as part of a team serving Amazon Peterborough.</p><br>
 
-                <p>Picker/Packer, Red Rock Partnership(aug 2015-nov 2015)<br>
-                    Performed part-time packing duties, picking duties, and relocating stock.</p>
+                <h3>Picker/Packer, Red Rock Partnership(aug 2015-nov 2015)</h3>
+                <p>Performed part-time packing duties, picking duties, and relocating stock.</p><br>
 
-                <p>Car Cleaner, Orton Hand Car Wash(aug 2014-june 2015)<br>
-                    Hoovered, washed, polished cars, and performed daily tasks in the car wash service industry.
+                <h3>Car Cleaner, Orton Hand Car Wash(aug 2014-june 2015)</h3>
+                <p> Hoovered, washed, polished cars, and performed daily tasks in the car wash service industry.</p>
+
             </section>
+
             <section id="education">
 
                 <h2>Places I've studied</h2>
-                <p>Frontend Development, PurpleBeard Training, Uk (march 2023-june 2023)</p>
-                <p> Bachelor's Degree Equivalent on Chemistry, Industrial High-School Group "Dragomir
-                    Hurmuzescu",Medgidia,Romania (2005-2009)</p>
-                <p>Professional Training Certificate Level III, Chemistry Lab Technician in Natural Resources and
+                <p><mark>Frontend Development</mark>, PurpleBeard Training, Uk (march 2023-june 2023)</p>
+                <p>Professional Training Certificate Level III, <mark>Chemistry Lab Technician</mark> in Natural
+                    Resources and
                     Protection of Environment, Industrial High-School Group "Dragomir Hurmuzescu", Medgidia,
                     Romania(2005-2009)</p>
-                <p>Diploma of Journalist, University Ovidius of Constanta, Romania, Specialty: Mass-media and Journalism
+                <p>Diploma of Journalist, University Ovidius of Constanta, Romania, Speciality: <mark>Mass-media
+                        Communication and Journalism</mark>
                     (2009-2012)</p>
             </section>
         </main>
@@ -133,13 +136,14 @@
                         <li><a href="...">Personal Github</a></li>
                         <li><a href="https://github.com/AnamariaGherghisan">Work Github</a></li>
                         <li><a href="https://www.linkedin.com/in/anamaria-gherghisan-824051204/">Linked-in</a></li>
-                        <li> Anamaria G - <a href="#top"><button>Back to Top</button></a></li>
+                        <li> Ana-Maria G - <a href="#"><button id="top">Back to Top</button></a></li>
                     </ul>
                 </nav>
             </section>
         </footer>
     </div>
     <script>
+
         const navLinksList = document.querySelector("#navLinksList")
         const collapseButton = document.querySelector("#collapseButton")
         const toggleNavbarLinks = () => {
